--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <section class="hero">
 
             <h1><strong>Cody Touchette Bio</strong></h1>
-            <img src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\bio pic.jpg" alt="Cody James" />
+            <img src="assets\img\bio pic.jpg" alt="Cody James" />
+           
 
             <div>
                 <ul>
