--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <section class="'card">
                     <header>My first application</header>
                     <a href="https://github.com/codyt93/first-challenge" target="_blank"> <img id="first"
-                            src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\zone3.jpg" alt="first application" />
+                            src="assets\img\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg" alt="first application" />
 
                 </section>
 
@@ -67,25 +67,25 @@
                 <section class="card">
                     <header>Future Website</header>
                     <a href="https://github.com/codyt93/first-challenge" target="_blank"> <img
-                            src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
+                            src="assets\img\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
                             alt="website" /></a>
 
                 </section>
                 <section class="card">
                     <header>Coding Work</header>
-                    <img src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
+                    <img src="assets\img\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
                         alt="coding" />
 
                 </section>
                 <section class="card">
                     <header>Future Employers</header>
-                    <img src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
+                    <img src="assets\img\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
                         alt="future" />
 
                 </section>
                 <section class="card">
                     <header>Previous employers</header>
-                    <img src="C:\Users\codyt\OneDrive\Pictures\Saved Pictures\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
+                    <img src="assets\img\360_F_270622417_2gasOBUwqXdcpkgEl9PUihhhnQZeX4nQ.jpg"
                         alt="previos" />
                 </section>
             </div>
